add email and modify emailFrom name

--- a/gui/locale/az/LC_MESSAGES/django.po
+++ b/gui/locale/az/LC_MESSAGES/django.po
@@ -4445,7 +4445,7 @@ msgstr ""
 #: system/models.py:210
 msgid ""
 "An email address that the system will use for the sending address for mail "
-"it sends, eg: freenas@example.com"
+"it sends, eg: tabangnas@example.com"
 msgstr ""
 
 #: system/models.py:216
