--- a/gui/locale/cs/LC_MESSAGES/django.po
+++ b/gui/locale/cs/LC_MESSAGES/django.po
@@ -4668,10 +4668,10 @@ msgstr "Z e-mailu"
 #: system/models.py:210
 msgid ""
 "An email address that the system will use for the sending address for mail "
-"it sends, eg: freenas@example.com"
+"it sends, eg: tabangnas@example.com"
 msgstr ""
 "E-mailová adresa, kterou bude systém používat pro odesílání zpráv, např.: "
-"freenas@example.com"
+"tabangnas@example.com"
 
 #: system/models.py:216
 msgid "Outgoing mail server"
