--- a/gui/locale/mt/LC_MESSAGES/django.po
+++ b/gui/locale/mt/LC_MESSAGES/django.po
@@ -7384,7 +7384,7 @@ msgstr ""
 #: system/models.py:351
 msgid ""
 "An email address that the system will use for the sending address for mail "
-"it sends, eg: freenas@example.com"
+"it sends, eg: tabangnas@example.com"
 msgstr ""
 
 #: system/models.py:358
