--- a/gui/locale/sr/LC_MESSAGES/django.po
+++ b/gui/locale/sr/LC_MESSAGES/django.po
@@ -4633,10 +4633,10 @@ msgstr "Iz e-pošte"
 #: system/models.py:210
 msgid ""
 "An email address that the system will use for the sending address for mail "
-"it sends, eg: freenas@example.com"
+"it sends, eg: tabangnas@example.com"
 msgstr ""
 "E-mail adresa koju će sistem koristiti kao adresu za slanje za mail koji "
-"šalje, npr: freenas@example.com"
+"šalje, npr: tabangnas@example.com"
 
 #: system/models.py:216
 msgid "Outgoing mail server"
