--- a/gui/locale/bg/LC_MESSAGES/django.po
+++ b/gui/locale/bg/LC_MESSAGES/django.po
@@ -4537,7 +4537,7 @@ msgstr "От имейл"
 #: system/models.py:210
 msgid ""
 "An email address that the system will use for the sending address for mail "
-"it sends, eg: freenas@example.com"
+"it sends, eg: tabangnas@example.com"
 msgstr "Изходящ адрес на електронна поща, например: freenas@mydomain.com"
 
 #: system/models.py:216
