--- a/gui/locale/de/LC_MESSAGES/django.po
+++ b/gui/locale/de/LC_MESSAGES/django.po
@@ -4818,10 +4818,10 @@ msgstr "Absenderadresse"
 #: system/models.py:210
 msgid ""
 "An email address that the system will use for the sending address for mail "
-"it sends, eg: freenas@example.com"
+"it sends, eg: tabangnas@example.com"
 msgstr ""
 "Die E-Mail Adresse wird das System als Absenderadresse für ausgehende "
-"Nachrichten verwenden, z.B. freenas@example.com."
+"Nachrichten verwenden, z.B. tabangnas@example.com."
 
 #: system/models.py:216
 msgid "Outgoing mail server"
