--- a/gui/locale/el/LC_MESSAGES/django.po
+++ b/gui/locale/el/LC_MESSAGES/django.po
@@ -4688,10 +4688,10 @@ msgstr "Από το e-mail"
 #: system/models.py:210
 msgid ""
 "An email address that the system will use for the sending address for mail "
-"it sends, eg: freenas@example.com"
+"it sends, eg: tabangnas@example.com"
 msgstr ""
 "Μια διεύθυνση ηλεκτρονικού ταχυδρομείου που το σύστημα θα χρησιμοποιήσει για "
-"την αποστολή αλληλογραφίας, π.χ.: freenas@example.com"
+"την αποστολή αλληλογραφίας, π.χ.: tabangnas@example.com"
 
 #: system/models.py:216
 msgid "Outgoing mail server"
