--- a/gui/locale/en_GB/LC_MESSAGES/django.po
+++ b/gui/locale/en_GB/LC_MESSAGES/django.po
@@ -4558,10 +4558,10 @@ msgstr "From e-mail"
 #: system/models.py:210
 msgid ""
 "An email address that the system will use for the sending address for mail "
-"it sends, eg: freenas@example.com"
+"it sends, eg: tabangnas@example.com"
 msgstr ""
 "An e-mail address that the system will use for the sending address for mail "
-"it sends, eg: freenas@example.com"
+"it sends, eg: tabangnas@example.com"
 
 #: system/models.py:216
 msgid "Outgoing mail server"
