--- a/gui/locale/es/LC_MESSAGES/django.po
+++ b/gui/locale/es/LC_MESSAGES/django.po
@@ -4603,10 +4603,10 @@ msgstr "Desde el correo de:"
 #: system/models.py:210
 msgid ""
 "An email address that the system will use for the sending address for mail "
-"it sends, eg: freenas@example.com"
+"it sends, eg: tabangnas@example.com"
 msgstr ""
 "Dirección de e-mail que el sistema usará para enviar correo, ej: "
-"freenas@example.com"
+"tabangnas@example.com"
 
 #: system/models.py:216
 msgid "Outgoing mail server"
