--- a/gui/locale/id/LC_MESSAGES/django.po
+++ b/gui/locale/id/LC_MESSAGES/django.po
@@ -4718,7 +4718,7 @@ msgstr "Dari email"
 #, fuzzy
 msgid ""
 "An email address that the system will use for the sending address for mail "
-"it sends, eg: freenas@example.com"
+"it sends, eg: tabangnas@example.com"
 msgstr ""
 "Sebuah alamat email yang digunakan oleh sistem akan digunakan untuk "
 "mengirim, e.g: freenas@mydomain.com"
