--- a/gui/locale/ja/LC_MESSAGES/django.po
+++ b/gui/locale/ja/LC_MESSAGES/django.po
@@ -4809,10 +4809,10 @@ msgstr "送信元アドレス"
 #: system/models.py:210
 msgid ""
 "An email address that the system will use for the sending address for mail "
-"it sends, eg: freenas@example.com"
+"it sends, eg: tabangnas@example.com"
 msgstr ""
 "システムがメールを送信するときに使用するメールアドレスを指定します。（例: "
-"freenas@example.com）"
+"tabangnas@example.com）"
 
 #: system/models.py:216
 msgid "Outgoing mail server"
