--- a/gui/locale/lv/LC_MESSAGES/django.po
+++ b/gui/locale/lv/LC_MESSAGES/django.po
@@ -4562,10 +4562,10 @@ msgstr "No e-pasta"
 #: system/models.py:210
 msgid ""
 "An email address that the system will use for the sending address for mail "
-"it sends, eg: freenas@example.com"
+"it sends, eg: tabangnas@example.com"
 msgstr ""
 "E-pasta adrese, kuru lietos sistēma par sūtīšanas adresi, sūtot pastu, piem: "
-"freenas@example.com"
+"tabangnas@example.com"
 
 #: system/models.py:216
 msgid "Outgoing mail server"
