--- a/gui/locale/nb/LC_MESSAGES/django.po
+++ b/gui/locale/nb/LC_MESSAGES/django.po
@@ -4622,7 +4622,7 @@ msgstr "Fra mailadresse"
 #: system/models.py:210
 msgid ""
 "An email address that the system will use for the sending address for mail "
-"it sends, eg: freenas@example.com"
+"it sends, eg: tabangnas@example.com"
 msgstr ""
 
 #: system/models.py:216
