--- a/gui/locale/nl/LC_MESSAGES/django.po
+++ b/gui/locale/nl/LC_MESSAGES/django.po
@@ -4600,10 +4600,10 @@ msgstr "Van-e-mailadres"
 #: system/models.py:210
 msgid ""
 "An email address that the system will use for the sending address for mail "
-"it sends, eg: freenas@example.com"
+"it sends, eg: tabangnas@example.com"
 msgstr ""
 "Het e-mailadres dat het systeem als verzendadres voor uitgaande e-mail zal "
-"gebruiken, bv. freenas@example.com"
+"gebruiken, bv. tabangnas@example.com"
 
 #: system/models.py:216
 msgid "Outgoing mail server"
