--- a/gui/locale/pl/LC_MESSAGES/django.po
+++ b/gui/locale/pl/LC_MESSAGES/django.po
@@ -4641,7 +4641,7 @@ msgstr "Z adresu email"
 #, fuzzy
 msgid ""
 "An email address that the system will use for the sending address for mail "
-"it sends, eg: freenas@example.com"
+"it sends, eg: tabangnas@example.com"
 msgstr ""
 "Adres e-mail używany przez system jako adres nadawcy dla wysyłanych mail-i, "
 "np. freenas@mojadomena.com"
