--- a/gui/locale/pt/LC_MESSAGES/django.po
+++ b/gui/locale/pt/LC_MESSAGES/django.po
@@ -4625,10 +4625,10 @@ msgstr "De"
 #: system/models.py:210
 msgid ""
 "An email address that the system will use for the sending address for mail "
-"it sends, eg: freenas@example.com"
+"it sends, eg: tabangnas@example.com"
 msgstr ""
 "Um endereço de e-mail que o sistema usará para o endereço de envio de "
-"correio envia, eg: freenas@example.com"
+"correio envia, eg: tabangnas@example.com"
 
 #: system/models.py:216
 msgid "Outgoing mail server"
