--- a/gui/locale/pt_BR/LC_MESSAGES/django.po
+++ b/gui/locale/pt_BR/LC_MESSAGES/django.po
@@ -4628,7 +4628,7 @@ msgstr "E-mail do remetente"
 #: system/models.py:210
 msgid ""
 "An email address that the system will use for the sending address for mail "
-"it sends, eg: freenas@example.com"
+"it sends, eg: tabangnas@example.com"
 msgstr "Endereço de email utilizado para envio, ex: freenas@examplo.com"
 
 #: system/models.py:216
