--- a/gui/locale/ru/LC_MESSAGES/django.po
+++ b/gui/locale/ru/LC_MESSAGES/django.po
@@ -4627,10 +4627,10 @@ msgstr "Обратный адрес"
 #: system/models.py:210
 msgid ""
 "An email address that the system will use for the sending address for mail "
-"it sends, eg: freenas@example.com"
+"it sends, eg: tabangnas@example.com"
 msgstr ""
 "Адрес электронной почты, который система будет использовать при отправке "
-"почты. те: freenas@example.com"
+"почты. те: tabangnas@example.com"
 
 #: system/models.py:216
 msgid "Outgoing mail server"
