--- a/gui/locale/sv/LC_MESSAGES/django.po
+++ b/gui/locale/sv/LC_MESSAGES/django.po
@@ -4579,10 +4579,10 @@ msgstr "Från e-post"
 #: system/models.py:210
 msgid ""
 "An email address that the system will use for the sending address for mail "
-"it sends, eg: freenas@example.com"
+"it sends, eg: tabangnas@example.com"
 msgstr ""
 "En e-postadress som systemet kommer att användas för att skicka e-post, "
-"t.ex.: freenas@example.com"
+"t.ex.: tabangnas@example.com"
 
 #: system/models.py:216
 msgid "Outgoing mail server"
