--- a/gui/locale/tr/LC_MESSAGES/django.po
+++ b/gui/locale/tr/LC_MESSAGES/django.po
@@ -4651,7 +4651,7 @@ msgstr "Kimden e-postası"
 #: system/models.py:210
 msgid ""
 "An email address that the system will use for the sending address for mail "
-"it sends, eg: freenas@example.com"
+"it sends, eg: tabangnas@example.com"
 msgstr ""
 "Sistemin postayı gönderen olarak gönderim adresi için kullanacağı e-posta "
 "adresi, örn: freenas@ornek.com"
