--- a/gui/locale/uk/LC_MESSAGES/django.po
+++ b/gui/locale/uk/LC_MESSAGES/django.po
@@ -4617,10 +4617,10 @@ msgstr "Зворотня адреса email"
 #: system/models.py:210
 msgid ""
 "An email address that the system will use for the sending address for mail "
-"it sends, eg: freenas@example.com"
+"it sends, eg: tabangnas@example.com"
 msgstr ""
 "Адреса електронної пошти, яку система буде використовувати для відправлення, "
-"наприклад freenas@example.com"
+"наприклад tabangnas@example.com"
 
 #: system/models.py:216
 msgid "Outgoing mail server"
