--- a/gui/locale/zh_CN/LC_MESSAGES/django.po
+++ b/gui/locale/zh_CN/LC_MESSAGES/django.po
@@ -4409,8 +4409,8 @@ msgstr "发件人地址"
 #: system/models.py:210
 msgid ""
 "An email address that the system will use for the sending address for mail "
-"it sends, eg: freenas@example.com"
-msgstr "系统用于发送邮件的邮件地址，如freenas@example.com"
+"it sends, eg: tabangnas@example.com"
+msgstr "系统用于发送邮件的邮件地址，如tabangnas@example.com"
 
 #: system/models.py:216
 msgid "Outgoing mail server"
