--- a/gui/locale/zh_TW/LC_MESSAGES/django.po
+++ b/gui/locale/zh_TW/LC_MESSAGES/django.po
@@ -4537,7 +4537,7 @@ msgstr "從電子郵件"
 #: system/models.py:210
 msgid ""
 "An email address that the system will use for the sending address for mail "
-"it sends, eg: freenas@example.com"
+"it sends, eg: tabangnas@example.com"
 msgstr "系統將使用此電子郵件地址發送郵件，例如：freenas@mydomain.com"
 
 #: system/models.py:216
